--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -158,3 +158,5 @@
 /TempTestSuite1561808826436.class
 /TempTestSuite1561809662518.class
 /internal/
+/TempTestCase1567734568188.class
+/TempTestCase1567734966520.class
